Bug 1592369 - Set [orient], [pack], [dir], and [align] styles with CSS instead of reading the XUL layout attributes r=NeilDeakin
Differential Revision: https://phabricator.services.mozilla.com/D51013

UltraBlame original commit: c58aa1b00988718389d5448a9cddf2ff1f7a3d8b

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -189,6 +189,41 @@ border
 box
 ;
 }
+scrollbar
+[
+orient
+=
+"
+vertical
+"
+]
+slider
+[
+orient
+=
+"
+vertical
+"
+]
+thumb
+[
+orient
+=
+"
+vertical
+"
+]
+{
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+}
 thumb
 {
 -
@@ -199,6 +234,24 @@ user
 modify
 :
 initial
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+-
+moz
+-
+box
+-
+pack
+:
+center
 ;
 }
 scrollbarbutton
