--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -2145,6 +2145,206 @@ display
 none
 ;
 }
+[
+orient
+=
+"
+vertical
+"
+]
+{
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+!
+important
+;
+}
+[
+orient
+=
+"
+horizontal
+"
+]
+{
+-
+moz
+-
+box
+-
+orient
+:
+horizontal
+!
+important
+;
+}
+[
+align
+=
+"
+start
+"
+]
+{
+-
+moz
+-
+box
+-
+align
+:
+start
+!
+important
+;
+}
+[
+align
+=
+"
+center
+"
+]
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+!
+important
+;
+}
+[
+align
+=
+"
+end
+"
+]
+{
+-
+moz
+-
+box
+-
+align
+:
+end
+!
+important
+;
+}
+[
+align
+=
+"
+baseline
+"
+]
+{
+-
+moz
+-
+box
+-
+align
+:
+baseline
+!
+important
+;
+}
+[
+align
+=
+"
+stretch
+"
+]
+{
+-
+moz
+-
+box
+-
+align
+:
+stretch
+!
+important
+;
+}
+[
+pack
+=
+"
+start
+"
+]
+{
+-
+moz
+-
+box
+-
+pack
+:
+start
+!
+important
+;
+}
+[
+pack
+=
+"
+center
+"
+]
+{
+-
+moz
+-
+box
+-
+pack
+:
+center
+!
+important
+;
+}
+[
+pack
+=
+"
+end
+"
+]
+{
+-
+moz
+-
+box
+-
+pack
+:
+end
+!
+important
+;
+}
 supports
 -
 moz
@@ -2170,186 +2370,6 @@ flex
 "
 )
 {
-[
-orient
-=
-"
-vertical
-"
-]
-{
--
-moz
--
-box
--
-orient
-:
-vertical
-;
-}
-[
-orient
-=
-"
-horizontal
-"
-]
-{
--
-moz
--
-box
--
-orient
-:
-horizontal
-;
-}
-[
-align
-=
-"
-start
-"
-]
-{
--
-moz
--
-box
--
-align
-:
-start
-;
-}
-[
-align
-=
-"
-center
-"
-]
-{
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-[
-align
-=
-"
-end
-"
-]
-{
--
-moz
--
-box
--
-align
-:
-end
-;
-}
-[
-align
-=
-"
-baseline
-"
-]
-{
--
-moz
--
-box
--
-align
-:
-baseline
-;
-}
-[
-align
-=
-"
-stretch
-"
-]
-{
--
-moz
--
-box
--
-align
-:
-stretch
-;
-}
-[
-pack
-=
-"
-start
-"
-]
-{
--
-moz
--
-box
--
-pack
-:
-start
-;
-}
-[
-pack
-=
-"
-center
-"
-]
-{
--
-moz
--
-box
--
-pack
-:
-center
-;
-}
-[
-pack
-=
-"
-end
-"
-]
-{
--
-moz
--
-box
--
-pack
-:
-end
-;
-}
 [
 flex
 =
